base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/managed-by: Helm
  annotations:
    meta.helm.sh/release-name: mosquitto
    meta.helm.sh/release-namespace: mosquitto
  name: mosquitto
