base/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
  namespace: mosquitto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
      - name: mosquitto
        image: eclipse-mosquitto
        ports:
        - containerPort: 8883
        - containerPort: 9001
        - containerPort: 1883
        - containerPort: 1884
        volumeMounts:
        - mountPath: /mosquitto/config/mosquitto.conf
          subPath: mosquitto.conf
          name: config
        # - mountPath: /mosquitto/certs/
        #   name: certs
      volumes:
      - name: config
        configMap:
          name: mosquitto-config
      # - name: certs
      #   secret:
      #     secretName: mosquitto-certs
