base/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-svc
  namespace: mosquitto
spec:
  type: ClusterIP
  selector:
    app: mosquitto  
  ports:
  - port: 8883
