base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: mosquitto
  namespace: mosquitto    
spec:
  rules:
  - host: mqtt.digitalinfo.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mosquitto-svc
            port: 
              number: 8883
